--- a/scss/ue-c-tooltip-trust.scss
+++ b/scss/ue-c-tooltip-trust.scss
@@ -6,59 +6,33 @@ $media: 768px;
 $width:48px;
 
 .ue-c-tooltip-trust{
+	cursor: pointer;
 	top:2px;
 	left: 2px;
-	@media all and (min-width: $media) {
-		top: 0;
-		left: 4px;
-	};
+		@media all and (min-width: $media) {
+			top: 0;
+			left: 4px;
+		};
 	display: inline-block;
 	position: relative;
 	width: $width;
 	height: 13px;
-	cursor: pointer;
 	button{
 		background: transparent;
 		margin: 0;
-		padding: 0;
+		padding: 2px;
 		border: 0;
-		-webkit-tap-highlight-color: rgba(0,0,0,0);
-     -webkit-tap-highlight-color: transparent; /* For some Androids */
-		&:active,
-		&:focus,
-		&.active {
-			background-image: none;
-			outline: 0;
-			-webkit-box-shadow: none;
-				box-shadow: none;
-				-webkit-tap-highlight-color: rgba(0,0,0,0);
-		}
+		cursor: pointer;
 	}
-	&__container{
-		z-index: 1;
+	&__button{
 		width: $width;
 		height: 13px;
-		display: inline-block;
-		position: relative;
-	}
-	&__info-button{
-		z-index: 0;
-		position: absolute;
-		top: 0;
-		right: 0;
-		width: $width;
-		height: 13px;
-		
-	}
-	&__close{
-		position: absolute;
-		top: 1.3em;
-		right: 1.3em;
-		z-index: 1;
+		display: flex;
 	}
 	&__main{
 		display: none;
 		position: fixed;
+		z-index: 2;
 		
 		p{
 			font-family: 'Clear Sans', Arial, sans-serif, helvetica; ;
@@ -71,6 +45,13 @@ $width:48px;
 			padding-top: 0.5em;
 			display: block;
 		}
+	}
+	
+	&__close{
+		position: absolute;
+		top: 1.3em;
+		right: 1.3em;
+		z-index: 1;
 	}
 	&__box{
 		width: $width-box;
