--- a/src/assets/partials/tooltip-trust1.hbs
+++ b/src/assets/partials/tooltip-trust1.hbs
@@ -10,7 +10,7 @@
         </svg>
     </button>
 
-    <div class="ue-c-tooltip-trust__main" role="dialog"  tabindex="-1" id="trust_main_container">
+    <div class="ue-c-tooltip-trust__main is-closed" role="dialog"  tabindex="-1" id="trust_main_container">
         <div role="document">
             <button title="cerrar ventana" class="ue-c-tooltip-trust__close">
                 <span class="is-hidden">cerrar</span>
