--- a/scss/ue-c-tooltip-trust.scss
+++ b/scss/ue-c-tooltip-trust.scss
@@ -84,6 +84,11 @@ $width:48px;
 			border-width: 14px;
 			margin-left: -60px;
 		}
+		&.small_viewport{
+			&:after,&:before{
+				content:none;
+			}
+		}
 		
 
 	}
