--- a/src/assets/partials/tooltip-trust.hbs
+++ b/src/assets/partials/tooltip-trust.hbs
@@ -8,8 +8,7 @@
     </svg>
 </button>
 
-<div id="ue-c_tooltip-trust" class="ue-c-tooltip-trust">
-    <div class="ue-c-tooltip-trust__main " role="dialog"  tabindex="-1" id="trust_main_container">
+    <div  id="ue-c_tooltip-trust" class="ue-c-tooltip-trust " role="dialog"  tabindex="-1" id="trust_main_container">
         <div role="document">
             <button title="cerrar ventana" class="ue-c-tooltip-trust--close">
                 <span class="ue-c-tooltip-trust--hidden">cerrar</span>
@@ -18,13 +17,10 @@
                     />
                 </svg>
             </button>
-            <div class="ue-c-tooltip-trust__box ">
-                <p>Basado en hechos, ya sean presenciados y verificados directamente por el periodista, o informados y verificados
-                    a partir de fuentes bien informadas
-                    <a href="https://www.elmundo.es/em/codigo-etico.html" title="Se abre en nueva ventana" target="_blank">Pulsa aquí para saber más</a>
-                </p>
-            </div>
+            <p>Basado en hechos, ya sean presenciados y verificados directamente por el periodista, o informados y verificados
+                a partir de fuentes bien informadas
+                <a href="https://www.elmundo.es/em/codigo-etico.html" title="Se abre en nueva ventana" target="_blank">Pulsa aquí para saber más</a>
+            </p>
         </div>
     </div>
     
-</div>
