--- a/scss/ue-c-tooltip-trust.scss
+++ b/scss/ue-c-tooltip-trust.scss
@@ -1,86 +1,83 @@
-$color-main: white;
 $border-color: rgba(151, 151, 151, 0.452);
 $border-size: 1px;
 $width-box: 240px;
 $media: 768px;
 $width:48px;
+$color-main: #fff;
 
 .info-trust__button{
-	width: $width;
-	height: 13px;
-	display: flex;
+	justify-content: center;
 	background: transparent;
 	margin: 0;
-	padding: 2px;
 	border: 0;
 	cursor: pointer;
+	width: 30px;
+	height: 13px;
+	position: relative;
+	top:2px;
+	@media all and (min-width: $media) {
+		display: flex;
+		width: auto;
+		top:0;
+	};
 }
 .ue-c-tooltip-trust{
+	background-color: $color-main;
+	width: $width-box;
+	display: none;
+	position: fixed;
 	cursor: pointer;
+	z-index: 2;
+	border: $border-size solid $border-color;
+	border-radius: 12px;
+	padding: 1em 2.5em 1em 1em;
+	box-shadow: 0px 0px 7px 0px rgba(167, 167, 167, 0.6);
 	top:2px;
 	left: 2px;
 	@media all and (min-width: $media) {
 		top: 0;
 		left: 4px;
 	};
-	display: inline-block;
-	position: relative;
-	width: $width;
-	height: 13px;
-	&__main{
-		display: none;
-		position: fixed;
-		z-index: 2;
-		p{
-			font-family: 'Clear Sans', Arial, sans-serif, helvetica; ;
-			font-size: 1em;
-			line-height: 1.4em;
-			margin: 0;
-			padding: 0;
-		}
-		a{
-			padding-top: 0.5em;
-			display: block;
+	&:after, &:before {
+		bottom: 100%;
+		left: 50%;
+		border: solid transparent;
+		content: " ";
+		height: 0;
+		width: 0;
+		position: absolute;
+		pointer-events: none;
+	}
+	
+	&:after {
+		border-color: rgba(136, 183, 213, 0);
+		border-bottom-color: var(--ue-c-tooltip-color-main, #fff);
+		border-width: 13px;
+		margin-left: 0;
+		transform: translateX(-50%);
+	}
+	&:before {
+		border-color: rgba(194, 225, 245, 0);
+		border-bottom-color: $border-color;
+		border-width: 14px;
+		margin-left: 1;
+		transform: translateX(-50%);
+	}
+	&.small_viewport{
+		&:after,&:before{
+			content:none;
 		}
 	}
-	&__box{
-		width: $width-box;
-		background-color: $color-main;
-		border: $border-size solid $border-color;
-		border-radius: 12px;
-		padding: 1em 2.5em 1em 1em;
-		position: fixed;
-		box-shadow: 0px 0px 7px 0px rgba(167, 167, 167, 0.6);
-		&:after, &:before {
-			bottom: 100%;
-			left: 50%;
-			border: solid transparent;
-			content: " ";
-			height: 0;
-			width: 0;
-			position: absolute;
-			pointer-events: none;
-		}
-		
-		&:after {
-			border-color: rgba(136, 183, 213, 0);
-			border-bottom-color: var(--ue-c-tooltip-color-main, #fff);
-			border-width: 13px;
-			margin-left: -59px;
-		}
-		&:before {
-			border-color: rgba(194, 225, 245, 0);
-			border-bottom-color: $border-color;
-			border-width: 14px;
-			margin-left: -60px;
-		}
-		&.small_viewport{
-			&:after,&:before{
-				content:none;
-			}
-		}
-		
-
+	p{
+		font-family: 'Clear Sans', Arial, sans-serif, helvetica; ;
+		font-size: 1em;
+		line-height: 1.4em;
+		margin: 0;
+		padding: 0;
+	}
+	a{
+		padding-top: 0.5em;
+		display: block;
 	}
 	&--close{
 		position: absolute;
@@ -88,11 +85,11 @@ $width:48px;
 		right: 1.3em;
 		z-index: 1;
 		border: 0;
+		background-color: transparent;
 	}
 	&--open{
 		display: block;
 		height: auto;
-		width: $width-box;
 	}
 	&--hidden{
 		position:absolute;
