--- a/src/assets/partials/tooltip-trust.hbs
+++ b/src/assets/partials/tooltip-trust.hbs
@@ -8,7 +8,7 @@
     </svg>
 </button>
 
-    <div  id="ue-c_tooltip-trust" data-trigger="info-trust-button-uno" class="ue-c-tooltip-trust " role="dialog"  tabindex="-1" id="trust_main_container">
+    <div  id="ue-c_tooltip-trust"  data-trigger="info-trust-button-uno" class="ue-c-tooltip-trust ue-c-tooltip-trust--left-arrow " role="dialog"  tabindex="-1" id="trust_main_container">
         <div role="document">
             <button title="cerrar ventana" class="ue-c-tooltip-trust--close">
                 <span class="ue-c-tooltip-trust--hidden">cerrar</span>
@@ -21,6 +21,8 @@
                 a partir de fuentes bien informadas
                 <a href="https://www.elmundo.es/em/codigo-etico.html" title="Se abre en nueva ventana" target="_blank">Pulsa aquí para saber más</a>
             </p>
+            <div class="ue-c-tooltip-trust__arrow">
+            </div>
         </div>
     </div>
     
