--- a/scss/ue-c-tooltip-trust.scss
+++ b/scss/ue-c-tooltip-trust.scss
@@ -21,26 +21,67 @@ $color-main: #fff;
 		top:0;
 	};
 }
+// .ue-c-tooltip-trust{
+
+// 			width: 140px;
+// 			color: black;
+// 			background: #FFF8F7;
+// 			border: 1px solid rgb(160, 160, 160);
+// 			// visibility: hidden;
+// 			position: relative;
+// 			border-radius: 6px;
+// 			box-shadow: 0px 0px 6px rgb(160, 160, 160);
+// 			&:before {
+// 				content: '';
+// 				position: absolute;
+// 				top: 98%;
+// 				left: 50%;
+// 				margin-left: -12px;
+// 				width: 0;
+// 				height: 0;
+// 				border-top: 12px solid rgb(160, 160, 160);
+// 				border-right: 12px solid transparent;
+// 				border-left: 12px solid transparent;
+// 			}
+// 			&:after {
+// 				content: '';
+// 				position: absolute;
+// 				top: 98%;
+// 				left: 50%;
+// 				margin-left: -8px;
+// 				width: 0;
+// 				height: 0;
+// 				border-top: 8px solid #FFF8F7;
+// 				border-right: 8px solid transparent;
+// 				border-left: 8px solid transparent;
+// 			}
+// 	// &:hover {
+// 	// 	visibility: visible;
+// 	// 	opacity: 0.2;
+// 	// 	bottom: 30px;
+// 	// 	left: 50%;
+// 	// 	margin-left: -76px;
+// 	// 	z-index: 999;
+// 	// }
+	
+// 	p{
+// 		font-size: 10px;
+// 		line-height: 1em;
+// 	}
+	
+// }
+
 .ue-c-tooltip-trust{
-	background-color: $color-main;
-	width: $width-box;
-	display: none;
-	position: fixed;
-	cursor: pointer;
-	z-index: 2;
-	border: $border-size solid $border-color;
-	border-radius: 12px;
-	padding: 1em 2.5em 1em 1em;
-	box-shadow: 0px 0px 7px 0px rgba(167, 167, 167, 0.6);
-	top:2px;
-	left: 2px;
-	@media all and (min-width: $media) {
-		top: 0;
-		left: 4px;
-	};
+	max-width: 200px;
+
+		position: relative;
+		background: #ffffff;
+		border: 1px solid rgba(176, 176, 176, 0.637);
+		box-shadow: 0px 0px 2px 2px rgba(176,176,176,0.3);
+		border-radius:6px;
 	&:after, &:before {
-		bottom: 100%;
-		left: 50%;
+		right: 100%;
+		top: 50%;
 		border: solid transparent;
 		content: " ";
 		height: 0;
@@ -50,58 +91,24 @@ $color-main: #fff;
 	}
 	
 	&:after {
-		border-color: rgba(136, 183, 213, 0);
-		border-bottom-color: var(--ue-c-tooltip-color-main, #fff);
-		border-width: 13px;
-		margin-left: 0;
-		transform: translateX(-50%);
+		border-color: rgba(255, 255, 255, 0);
+		border-right-color: #ffffff;
+		border-width: 7px;
+		margin-top: -7px;
 	}
 	&:before {
-		border-color: rgba(194, 225, 245, 0);
-		border-bottom-color: $border-color;
-		border-width: 14px;
-		margin-left: 1;
-		transform: translateX(-50%);
+		border-color: rgba(133, 133, 133, 0);
+		border-right-color: rgba(176, 176, 176, 0.637);
+		border-width: 9px;
+		margin-top: -9px;
 	}
-	&--left-arrow{
-		&:after,&:before{
-			transform: rotate(90deg)  translateX(-50%);
+
+
+
+
+  	p{
+			font-size: 10px;
+			line-height: 1em;
 		}
-	}
-	p{
-		font-family: 'Clear Sans', Arial, sans-serif, helvetica; ;
-		font-size: 1em;
-		line-height: 1.4em;
-		margin: 0;
-		padding: 0;
-	}
-	a{
-		padding-top: 0.5em;
-		display: block;
-	}
-	&--close{
-		position: absolute;
-		top: 1.3em;
-		right: 1.3em;
-		z-index: 1;
-		border: 0;
-		background-color: transparent;
-	}
-	&--open{
-		display: block;
-		height: auto;
-	}
-	&--hidden{
-		position:absolute;
-		left:-10000px;
-		top:auto;
-		width:1px;
-		height:1px;
-		overflow:hidden;
-	}
-
-	
 }
-
-
 
