--- a/src/assets/partials/tooltip-trust.hbs
+++ b/src/assets/partials/tooltip-trust.hbs
@@ -8,13 +8,12 @@
     </svg>
 </button>
 
-    <div  id="ue-c_tooltip-trust" data-trigger="info-trust-button-uno" class="ue-c-tooltip-trust " role="dialog"  tabindex="-1" id="trust_main_container">
+    <div  id="ue-c_tooltip-trust" data-trigger="info-trust-button-uno" data-position="right" class="ue-c-tooltip-trust" role="dialog"  tabindex="-1" id="trust_main_container">
         <div role="document">
             {{!-- <button title="cerrar ventana" class="ue-c-tooltip-trust--close">
                 <span class="ue-c-tooltip-trust--hidden">cerrar</span>
             </button> --}}
-            <p>UNO - Basado en hechos, 
-                <a href="https://www.elmundo.es/em/codigo-etico.html" title="Se abre en nueva ventana" target="_blank">Pulsa aquí para saber más</a>
+            <p>UNO - Basado en hechos <a href="https://www.elmundo.es/em/codigo-etico.html" title="Se abre en nueva ventana" target="_blank">Pulsa aquí para saber más</a>
             </p>
         </div>
     </div>
