--- a/scss/ue-c-tooltip-trust.scss
+++ b/scss/ue-c-tooltip-trust.scss
@@ -11,65 +11,14 @@ $color-main: #fff;
 	margin: 0;
 	border: 0;
 	cursor: pointer;
-	width: 30px;
+	width: 13px;
 	height: 13px;
 	position: relative;
 	top:2px;
-	@media all and (min-width: $media) {
-		display: flex;
-		width: auto;
-		top:0;
-	};
+	margin: 0 1em;
 }
-// .ue-c-tooltip-trust{
 
-// 			width: 140px;
-// 			color: black;
-// 			background: #FFF8F7;
-// 			border: 1px solid rgb(160, 160, 160);
-// 			// visibility: hidden;
-// 			position: relative;
-// 			border-radius: 6px;
-// 			box-shadow: 0px 0px 6px rgb(160, 160, 160);
-// 			&:before {
-// 				content: '';
-// 				position: absolute;
-// 				top: 98%;
-// 				left: 50%;
-// 				margin-left: -12px;
-// 				width: 0;
-// 				height: 0;
-// 				border-top: 12px solid rgb(160, 160, 160);
-// 				border-right: 12px solid transparent;
-// 				border-left: 12px solid transparent;
-// 			}
-// 			&:after {
-// 				content: '';
-// 				position: absolute;
-// 				top: 98%;
-// 				left: 50%;
-// 				margin-left: -8px;
-// 				width: 0;
-// 				height: 0;
-// 				border-top: 8px solid #FFF8F7;
-// 				border-right: 8px solid transparent;
-// 				border-left: 8px solid transparent;
-// 			}
-// 	// &:hover {
-// 	// 	visibility: visible;
-// 	// 	opacity: 0.2;
-// 	// 	bottom: 30px;
-// 	// 	left: 50%;
-// 	// 	margin-left: -76px;
-// 	// 	z-index: 999;
-// 	// }
-	
-// 	p{
-// 		font-size: 10px;
-// 		line-height: 1em;
-// 	}
-	
-// }
+
 
 $color-border: rgba(176, 176, 176, 0.4);
 $color-background: white;
@@ -77,12 +26,17 @@ $color-transparent: rgba(255, 255, 255, 0);
 $width-after: 7;
 $width-before: 9;
 
+button > * {
+	pointer-events: none;
+}
+
 .ue-c-tooltip-trust{
+		display: none;
+		z-index: 10;
 		box-sizing: border-box;
 		padding: .5em;
 		max-width: 200px;
 		position: relative;
-		display: inline-block;
 		background: $color-background;
 		border: 1px solid $color-border;
 		box-shadow: 0px 0px 1px 1px $color-border;
@@ -97,7 +51,7 @@ $width-before: 9;
 		}
 		
 	// &--is-left{
-	&[data-position="left"]{
+	&[data-position="right"]{
 		&:after, &:before {
 			right: 100%;
 			top: 50%;
@@ -151,7 +105,7 @@ $width-before: 9;
 			margin-left: -#{$width-before}px;
 		}
 	}
-	&[data-position="right"]{
+	&[data-position="left"]{
 		&:after, &:before {
 			left: 100%;
 			top: 50%;
@@ -170,7 +124,10 @@ $width-before: 9;
 		}
 	}
 
-
+	&--open{
+		display: inline-block;
+		position: fixed;
+	}
 
 
 	p{
