--- a/src/assets/partials/tooltip-trust5.hbs
+++ b/src/assets/partials/tooltip-trust5.hbs
@@ -1,11 +1,10 @@
 <button  id="info-trust-button-cinco" class="info-trust__button info-trust__buttonDos" title="Información del contenido" aria-expanded="false" aria-haspopup="true" aria-controls="trust_main_container">
-   Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi officia ut quae obcaecati temporibus ad, exercitationem illo autem maxime
-   consequuntur eligendi id numquam voluptas doloribus est inventore fuga nihil nesciunt.
+   Lorem ipsum
 </button>
 
 
 
-<div  id="ue-c_tooltip-trust" data-position="bottom" data-trigger="info-trust-button-cinco" class="ue-c-tooltip-trust " role="dialog"  tabindex="-1" id="trust_main_container">
+<div  id="ue-c_tooltip-trust" data-position="left" data-trigger="info-trust-button-cinco" class="ue-c-tooltip-trust " role="dialog"  tabindex="-1" id="trust_main_container">
     <div role="document">
         <button title="cerrar ventana" class="ue-c-tooltip-trust--close">
             <span class="ue-c-tooltip-trust--hidden">cerrar</span>
