--- a/scss/ue-c-tooltip-trust.scss
+++ b/scss/ue-c-tooltip-trust.scss
@@ -41,7 +41,7 @@ button > * {
 		display: none;
 		z-index: 10;
 		box-sizing: border-box;
-		padding: .5em;
+		padding: 1em 2em 1em 1em;
 		max-width: 200px;
 		position: relative;
 		background: $color-background;
@@ -135,11 +135,35 @@ button > * {
 		display: inline-block;
 		position: fixed;
 	}
-
+	&--closearrow{
+		position: absolute;
+		top: 1.3em;
+		right: 1.3em;
+		z-index: 1;
+		border: 0;
+		background-color: transparent;
+	}
+	&--hidden{
+		position:absolute;
+		left:-10000px;
+		top:auto;
+		width:1px;
+		height:1px;
+		overflow:hidden;
+	}
+	button > * {
+		pointer-events: none;
+	}
+	button{
+		background-color: transparent;
+		padding: 0;
+		margin:0;
+	}
 
 	p{
-		font-size: 10px;
-		line-height: 1em;
+		font-size: 12px;
+		font-family: sans-serif;
+		line-height: 1.4em;
 		padding: 0 ;
 	}
 	a{
