--- a/src/assets/partials/tooltip-trust.hbs
+++ b/src/assets/partials/tooltip-trust.hbs
@@ -12,8 +12,12 @@
 
     <div  id="ue-c_tooltip-trust" data-position="right" data-trigger="info-trust-button-uno" class="ue-c-tooltip-trust " role="dialog"  tabindex="-1" id="trust_main_container">
         <div role="document">
-            <button title="cerrar ventana" class="ue-c-tooltip-trust--close">
+            <button title="cerrar ventana" class="ue-c-tooltip-trust--closearrow">
                 <span class="ue-c-tooltip-trust--hidden">cerrar</span>
+                <svg xmlns="http://www.w3.org/2000/svg"  aria-hidden="true" role="img" width="12" height="12" viewBox="0 0 12 12">
+                    <path fill="#A1A1A1" fill-rule="nonzero" d="M6 4.182L10.182 0 12 1.818 7.818 6 12 10.182 10.182 12 6 7.818 1.818 12 0 10.182 4.182 6 0 1.818 1.818 0 6 4.182z"
+                    />
+                </svg>
             </button>
             <p>BOTTOM - Basado en hechos, ya sean presenciados y verificados directamente por el periodista, o informados y verificados
                 a partir de fuentes bien informadas
