--- a/scss/ue-c-tooltip-trust.scss
+++ b/scss/ue-c-tooltip-trust.scss
@@ -1,9 +1,14 @@
-$border-color: rgba(151, 151, 151, 0.452);
-$border-size: 1px;
-$width-box: 240px;
-$media: 768px;
-$width:48px;
-$color-main: #fff;
+
+$color-border: black;
+$color-background: orange;
+$color-transparent: rgba(255, 255, 255, 0);
+$font-color: #fff;
+$width-after: 7;
+$width-before: 9;
+$box-shadow: 0px 0px 1px 1px $color-border;
+$box-shadow: none;
+
+
 
 .info-trust__button{
 	justify-content: center;
@@ -28,11 +33,6 @@ $color-main: #fff;
 	display: block;
 }
 
-$color-border: rgba(176, 176, 176, 0.4);
-$color-background: white;
-$color-transparent: rgba(255, 255, 255, 0);
-$width-after: 7;
-$width-before: 9;
 
 button > * {
 	pointer-events: none;
@@ -47,7 +47,7 @@ button > * {
 		position: relative;
 		background: $color-background;
 		border: 1px solid $color-border;
-		box-shadow: 0px 0px 1px 1px $color-border;
+		box-shadow: $box-shadow;
 		border-radius:6px;
 		&:after, &:before {
 			border: solid transparent;
@@ -162,6 +162,7 @@ button > * {
 	}
 
 	p{
+		color: $font-color;
 		font-size: 12px;
 		font-family: sans-serif;
 		line-height: 1.4em;
