--- a/scss/ue-c-tooltip-trust.scss
+++ b/scss/ue-c-tooltip-trust.scss
@@ -1,66 +1,77 @@
+// fuentes
+@font-face {
+	font-family: "Roboto";
+	src: url("//e00-elmundo.uecdn.es/fonts/roboto/Roboto-Regular.eot")
+		format("eot");
+	src: url("//e00-elmundo.uecdn.es/fonts/roboto/Roboto-Regular.eot?#iefix")
+			format("embedded-opentype"),
+		url("//e00-elmundo.uecdn.es/fonts/roboto/Roboto-Regular.woff")
+			format("woff"),
+		url("//e00-elmundo.uecdn.es/fonts/roboto/Roboto-Regular.ttf") format("ttf");
+}
 
-$color-border: black;
-$color-background: orange;
+// variables
+$font-family: "Roboto";
+$width-border: 1;
+$color-border: rgba(143, 143, 143, 0.267);
 $color-transparent: rgba(255, 255, 255, 0);
-$font-color: #fff;
-$width-after: 7;
-$width-before: 9;
+$color-background: rgb(255, 255, 255);
+$font-color: rgb(0, 0, 0);
+$width-after: 12;
+$width-before: 15;
 $box-shadow: 0px 0px 1px 1px $color-border;
-$box-shadow: none;
 
 
-
-.info-trust__button{
-	justify-content: center;
-	background: transparent;
-	margin: 0;
-	border: 0;
-	cursor: pointer;
-	width: 113px;
-	height: 13px;
-	position: relative;
-	padding: 0;
-	background: red;
-}
-
-.info-trust__buttonDos{
-	color: white;
-	background-color: red;
-	width: 100px;
-	height: auto;
-	border-radius: 5px;
-	position: relative;
-	display: block;
-}
-
+// Para evitar los problemas que tiene js en los eventos click/tap con los SVG
+// https://css-tricks.com/almanac/properties/p/pointer-events/
 
 button > * {
 	pointer-events: none;
 }
 
-.ue-c-tooltip-trust{
-		display: none;
-		z-index: 10;
-		box-sizing: border-box;
-		padding: 1em 2.5em 1em 1em;
-		max-width: 200px;
-		position: relative;
-		background: $color-background;
-		border: 1px solid $color-border;
-		box-shadow: $box-shadow;
-		border-radius:6px;
-		&:after, &:before {
-			border: solid transparent;
-			content: " ";
-			height: 0;
-			width: 0;
-			position: absolute;
-			pointer-events: none;
-		}
-		
-	// &--is-left{
-	&[data-position="right"]{
-		&:after, &:before {
+//estilos botón
+
+.info-trust__button {
+	justify-content: center;
+	background: transparent;
+	margin: 0;
+	border: 0;
+	cursor: pointer;
+	width: 13px;
+	height: 13px;
+	position: relative;
+	padding: 0;
+}
+
+//estilos tooltip
+
+//https://www.cssportal.com/css-tooltip-generator/#
+.ue-c-tooltip-trust {
+	display: none;
+	z-index: 10;
+	box-sizing: border-box;
+	padding: 1em 2.5em 1em 1em;
+	max-width: 246px;
+	position: relative;
+	background: $color-background;
+	border: #{$width-border}px solid $color-border;
+	box-shadow: $box-shadow;
+	border-radius: 6px;
+	font-family: Roboto;
+	font-size: 15px;
+	&:after,
+	&:before {
+		border: solid transparent;
+		content: " ";
+		height: 0;
+		width: 0;
+		position: absolute;
+		pointer-events: none;
+	}
+	&[data-position="right"] {
+	
+		&:after,
+		&:before {
 			right: 100%;
 			top: 50%;
 		}
@@ -71,105 +82,108 @@ button > * {
 			border-right-color: $color-background;
 		}
 		&:before {
-			border-width: #{$width-before}px;
-			margin-top: -#{$width-before}px;
+			border-width: #{$width-before + $width-border -2}px;
+			margin-top: -#{$width-before + $width-border -2}px;
 			border-color: $color-transparent;
 			border-right-color: $color-border;
 		}
+		margin-left: #{$width-before}px;
 	}
-	&[data-position="top"]{
-		&:after, &:before {
+	&[data-position="top"] {
+		&:after,
+		&:before {
 			top: 100%;
 			left: 50%;
 		}
 		&:after {
 			border-color: $color-transparent;
-			border-top-color:$color-background;
+			border-top-color: $color-background;
 			border-width: #{$width-after}px;
 			margin-left: -#{$width-after}px;
 		}
 		&:before {
 			border-color: $color-transparent;
 			border-top-color: $color-border;
-			border-width: #{$width-before}px;
-			margin-left: -#{$width-before}px;
+			border-width: #{$width-before + $width-border -2}px;
+			margin-left: -#{$width-before + $width-border -2}px;
 		}
+		margin-top: -#{$width-before}px;
 	}
-	&[data-position="bottom"]{
-		&:after, &:before {
+	&[data-position="bottom"] {
+		&:after,
+		&:before {
 			bottom: 100%;
 			left: 50%;
 		}
 		&:after {
 			border-color: $color-transparent;
-			border-bottom-color:$color-background;
+			border-bottom-color: $color-background;
 			border-width: #{$width-after}px;
 			margin-left: -#{$width-after}px;
 		}
 		&:before {
 			border-color: $color-transparent;
-			border-bottom-color:$color-border;
-			border-width: #{$width-before}px;
-			margin-left: -#{$width-before}px;
+			border-bottom-color: $color-border;
+			border-width: #{$width-before + $width-border -2}px;
+			margin-left: -#{$width-before + $width-border -2}px;
 		}
+		margin-top: #{$width-before}px;
 	}
-	&[data-position="left"]{
-		&:after, &:before {
+	&[data-position="left"] {
+		&:after,
+		&:before {
 			left: 100%;
 			top: 50%;
 		}
 		&:after {
-			border-color: $color-transparent;;
+			border-color: $color-transparent;
 			border-left-color: #ffffff;
 			border-width: #{$width-after}px;
 			margin-top: -#{$width-after}px;
 		}
 		&:before {
 			border-color: $color-transparent;
-			border-left-color:$color-border;
-			border-width: #{$width-before}px;
-			margin-top: -#{$width-before}px;
+			border-left-color: $color-border;
+			border-width: #{$width-before + $width-border -2}px;
+			margin-top: -#{$width-before + $width-border -2}px;
 		}
+		margin-left: -#{$width-before}px;
+			
 	}
-
-	&--open{
+	&--open {
 		display: inline-block;
 		position: fixed;
 	}
-	&--closearrow{
+	&--closearrow {
 		position: absolute;
-		top: 1.3em;
+		top: 1.5em;
 		right: 1.3em;
 		z-index: 1;
 		border: 0;
 		background-color: transparent;
 	}
-	&--hidden{
-		position:absolute;
-		left:-10000px;
-		top:auto;
-		width:1px;
-		height:1px;
-		overflow:hidden;
+	&--hidden {
+		position: absolute;
+		left: -10000px;
+		top: auto;
+		width: 1px;
+		height: 1px;
+		overflow: hidden;
 	}
-	button > * {
-		pointer-events: none;
-	}
-	button{
+	button {
 		background-color: transparent;
 		padding: 0;
-		margin:0;
+		margin: 0;
 	}
-
-	p{
+	p {
 		color: $font-color;
-		font-size: 12px;
-		font-family: sans-serif;
-		line-height: 1.4em;
-		padding: 0 ;
+		font-family: $font-family;
+		font-size: 15px;
+		line-height: 1.3em;
+		padding: 0;
 	}
-	a{
+	a {
+		margin-top: 0.4em;
 		display: block;
 	}
 }
-
