--- a/src/assets/partials/tooltip-trust3.hbs
+++ b/src/assets/partials/tooltip-trust3.hbs
@@ -10,7 +10,7 @@
 
 
 
-<div  id="ue-c_tooltip-trust" data-position="right" data-trigger="info-trust-button-tres" class="ue-c-tooltip-trust " role="dialog"  tabindex="-1" id="trust_main_container">
+<div  id="ue-c_tooltip-trust" data-position="left" data-trigger="info-trust-button-tres" class="ue-c-tooltip-trust " role="dialog"  tabindex="-1" id="trust_main_container">
     <div role="document">
          <button title="cerrar ventana" class="ue-c-tooltip-trust--closearrow">
                 <span class="ue-c-tooltip-trust--hidden">cerrar</span>
