--- a/scss/ue-c-tooltip-trust.scss
+++ b/scss/ue-c-tooltip-trust.scss
@@ -11,15 +11,16 @@
 }
 
 // variables
-$font-family: "Roboto";
-$width-border: 1;
-$color-border: rgba(143, 143, 143, 0.267);
-$color-background: rgb(255, 255, 255);
-$font-color: rgb(0, 0, 0);
-$width-after: 12;
-$width-before: 15;
-$box-shadow: 0px 0px 1px 1px $color-border;
-$mq01: 768px;
+$ue-tooltip-font-family: "Roboto";
+$ue-tooltip-font-size: 15px;
+$ue-tooltip-width-border: 1;
+$ue-tooltip-color-border: rgba(143, 143, 143, 0.267);
+$ue-tooltip-color-background: rgb(255, 255, 255);
+$ue-tooltip-font-color: rgb(0, 0, 0);
+$ue-tooltip-width-after: 12;
+$ue-tooltip-width-before: 15;
+$ue-tooltip-box-shadow: 0px 0px 1px 1px $ue-tooltip-color-border;
+$ue-tooltip-mq01: 768px;
 
 
 // Para evitar los problemas que tiene js en los eventos click/tap con los SVG
@@ -30,7 +31,6 @@ button > * {
 }
 
 //estilos botón
-
 
 .info-trust__button {
 	justify-content: center;
@@ -45,31 +45,22 @@ button > * {
 	padding: 0;
 }
 
-.info-trust-button-otro{
-	background-color: orange;
-	border-radius: 5px;
-	padding: .5em 1em;
-	width: auto;
-	height: auto;
-}
-//estilos tooltip
 
+//estilos tooltip
 //https://www.cssportal.com/css-tooltip-generator/#
 .ue-c-tooltip-trust {
 	display: none;
 	z-index: 10;
 	box-sizing: border-box;
 	position: relative;
-	background: $color-background;
-	border: #{$width-border}px solid $color-border;
-	box-shadow: $box-shadow;
+	background: $ue-tooltip-color-background;
+	border: #{$ue-tooltip-width-border}px solid $ue-tooltip-color-border;
+	box-shadow: $ue-tooltip-box-shadow;
 	border-radius: 6px;
 	font-family: Roboto;
 	padding: 1em 2.5em 1em 1em;
 	max-width: 190px;
-
-
-	@media all and (min-width: $mq01) {
+	@media all and (min-width: $ue-tooltip-mq01) {
 		max-width: 246px;
 	};
 	&:after,
@@ -89,18 +80,18 @@ button > * {
 			top: 50%;
 		}
 		&:after {
-			border-width: #{$width-after}px;
-			margin-top: -#{$width-after}px;
+			border-width: #{$ue-tooltip-width-after}px;
+			margin-top: -#{$ue-tooltip-width-after}px;
 			border-color:  rgba(255, 255, 255, 0);
-			border-right-color: $color-background;
+			border-right-color: $ue-tooltip-color-background;
 		}
 		&:before {
-			border-width: #{$width-before + $width-border -2}px;
-			margin-top: -#{$width-before + $width-border -2}px;
+			border-width: #{$ue-tooltip-width-before + $ue-tooltip-width-border -2}px;
+			margin-top: -#{$ue-tooltip-width-before + $ue-tooltip-width-border -2}px;
 			border-color:  rgba(255, 255, 255, 0);
-			border-right-color: $color-border;
+			border-right-color: $ue-tooltip-color-border;
 		}
-		margin-left: #{$width-before}px;
+		margin-left: #{$ue-tooltip-width-before}px;
 	}
 	&[data-position="top"] {
 		&:after,
@@ -110,17 +101,17 @@ button > * {
 		}
 		&:after {
 			border-color:  rgba(255, 255, 255, 0);
-			border-top-color: $color-background;
-			border-width: #{$width-after}px;
-			margin-left: -#{$width-after}px;
+			border-top-color: $ue-tooltip-color-background;
+			border-width: #{$ue-tooltip-width-after}px;
+			margin-left: -#{$ue-tooltip-width-after}px;
 		}
 		&:before {
 			border-color:  rgba(255, 255, 255, 0);
-			border-top-color: $color-border;
-			border-width: #{$width-before + $width-border -2}px;
-			margin-left: -#{$width-before + $width-border -2}px;
+			border-top-color: $ue-tooltip-color-border;
+			border-width: #{$ue-tooltip-width-before + $ue-tooltip-width-border -2}px;
+			margin-left: -#{$ue-tooltip-width-before + $ue-tooltip-width-border -2}px;
 		}
-		margin-top: -#{$width-before}px;
+		margin-top: -#{$ue-tooltip-width-before}px;
 	}
 	&[data-position="bottom"] {
 		&:after,
@@ -130,17 +121,17 @@ button > * {
 		}
 		&:after {
 			border-color:  rgba(255, 255, 255, 0);
-			border-bottom-color: $color-background;
-			border-width: #{$width-after}px;
-			margin-left: -#{$width-after}px;
+			border-bottom-color: $ue-tooltip-color-background;
+			border-width: #{$ue-tooltip-width-after}px;
+			margin-left: -#{$ue-tooltip-width-after}px;
 		}
 		&:before {
 			border-color:  rgba(255, 255, 255, 0);
-			border-bottom-color: $color-border;
-			border-width: #{$width-before + $width-border -2}px;
-			margin-left: -#{$width-before + $width-border -2}px;
+			border-bottom-color: $ue-tooltip-color-border;
+			border-width: #{$ue-tooltip-width-before + $ue-tooltip-width-border -2}px;
+			margin-left: -#{$ue-tooltip-width-before + $ue-tooltip-width-border -2}px;
 		}
-		margin-top: #{$width-before}px;
+		margin-top: #{$ue-tooltip-width-before}px;
 	}
 	&[data-position="left"] {
 		&:after,
@@ -151,16 +142,16 @@ button > * {
 		&:after {
 			border-color:  rgba(255, 255, 255, 0);
 			border-left-color: #ffffff;
-			border-width: #{$width-after}px;
-			margin-top: -#{$width-after}px;
+			border-width: #{$ue-tooltip-width-after}px;
+			margin-top: -#{$ue-tooltip-width-after}px;
 		}
 		&:before {
 			border-color:  rgba(255, 255, 255, 0);
-			border-left-color: $color-border;
-			border-width: #{$width-before + $width-border -2}px;
-			margin-top: -#{$width-before + $width-border -2}px;
+			border-left-color: $ue-tooltip-color-border;
+			border-width: #{$ue-tooltip-width-before + $ue-tooltip-width-border -2}px;
+			margin-top: -#{$ue-tooltip-width-before + $ue-tooltip-width-border -2}px;
 		}
-		margin-left: -#{$width-before}px;
+		margin-left: -#{$ue-tooltip-width-before}px;
 			
 	}
 	&--open {
@@ -168,9 +159,10 @@ button > * {
 		position: fixed;
 	}
 	&--closearrow {
+		font-size: $ue-tooltip-font-size;
 		position: absolute;
-		top: 1.5em;
-		right: 1.3em;
+		top: 0.8em;
+		right: 0.8em;
 		z-index: 1;
 		border: 0;
 		background-color: transparent;
@@ -196,14 +188,14 @@ button > * {
 		margin: 0;
 	}
 	p {
-		color: $font-color;
-		font-family: $font-family;
+		color: $ue-tooltip-font-color;
+		font-family: $ue-tooltip-font-family;
 		font-size: 12px;
 		line-height: 1.3em;
 		padding: 0;
 		margin: 0;
-		@media all and (min-width: $mq01) {
-			font-size: 16px;
+		@media all and (min-width: $ue-tooltip-mq01) {
+			font-size: $ue-tooltip-font-size;
 		};
 	}
 	a {
