arreglo doble id

--- a/src/assets/partials/tooltip-trust-top.hbs
+++ b/src/assets/partials/tooltip-trust-top.hbs
@@ -1,4 +1,4 @@
-<button  id="info-trust-button-dos" class="info-trust__button" title="Información del contenido" aria-expanded="false" aria-haspopup="true" aria-controls="trust_main_container">
+<button  id="info-trust-button-dos" class="info-trust__button" title="Información del contenido" aria-expanded="false" aria-haspopup="true" aria-controls="ue-c_tooltip-trust">
     <svg  aria-hidden="true" role="img" xmlns="http://www.w3.org/2000/svg" width="13" height="13" viewBox="0 0 13 13">
         <g fill="none" fill-rule="evenodd" transform="translate(0 -1)">
             <rect width="13" height="13" y="1" fill="#EAEAEA" fill-rule="nonzero" rx="2" />
