arreglo doble id

--- a/src/assets/partials/tooltip-trust.hbs
+++ b/src/assets/partials/tooltip-trust.hbs
@@ -1,4 +1,4 @@
-<button  id="info-trust-button" class="info-trust__button" title="Información del contenido" aria-expanded="false" aria-haspopup="true" aria-controls="trust_main_container">
+<button  id="info-trust-button" class="info-trust__button" title="Información del contenido" aria-expanded="false" aria-haspopup="true" aria-controls="ue-c_tooltip-trust">
     <svg  aria-hidden="true" role="img" xmlns="http://www.w3.org/2000/svg" width="13" height="13" viewBox="0 0 13 13">
         <g fill="none" fill-rule="evenodd" transform="translate(0 -1)">
             <rect width="13" height="13" y="1" fill="#EAEAEA" fill-rule="nonzero" rx="2" />
@@ -10,7 +10,7 @@
 
 
 
-    <div  id="ue-c_tooltip-trust" data-position="bottom" data-trigger="info-trust-button" class="ue-c-tooltip-trust " role="dialog"  tabindex="-1" id="trust_main_container">
+    <div  id="ue-c_tooltip-trust" data-position="bottom" data-trigger="info-trust-button" class="ue-c-tooltip-trust " role="dialog"  tabindex="-1" >
         <div role="document">
             <button title="cerrar ventana" class="ue-c-tooltip-trust--closearrow">
                 <span class="ue-c-tooltip-trust--hidden">cerrar</span>
